--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ endpoints.enabled = false
 endpoints.health.enabled = true
 
 kafka.topic=csp
-kafka.cluster.name=hono-kafka-cluster
+kafka.cluster.name=my-cluster
 kafka.project=strimzi
 
 kafka.service=${kafka.cluster.name}-kafka-bootstrap
