--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ endpoints.health.enabled = true
 
 kafka.topic=csp
 kafka.cluster.name=my-cluster
-kafka.project=strimzi
+kafka.project=kafka
 
 kafka.service=${kafka.cluster.name}-kafka-bootstrap
 kafka.host=${kafka.service}.${kafka.project}.svc
 kafka.port=9092
-kafka.brokers=localhost:${kafka.port}
+kafka.brokers=my-cluster-kafka-bootstrap:${kafka.port}
