modified with consumer route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,7 @@ kafka.project=kafka
 kafka.service=${kafka.cluster.name}-kafka-bootstrap
 kafka.host=${kafka.service}.${kafka.project}.svc
 kafka.port=9092
-kafka.brokers=my-cluster-kafka-bootstrap:${kafka.port}
+#kafka.brokers=
+
+camel.component.kafka.configuration.brokers=localhost:${kafka.port}
+camel.component.kafka.configuration.group-id=poc-openshift-amqstreams
