--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ kafka.host=${kafka.service}.${kafka.project}.svc
 kafka.port=9092
 #kafka.brokers=
 
-camel.component.kafka.configuration.brokers=localhost:${kafka.port}
+camel.component.kafka.configuration.brokers=my-cluster-kafka-bootstrap:${kafka.port}
 camel.component.kafka.configuration.group-id=poc-openshift-amqstreams
